--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -4,6 +4,10 @@
 }
 
 .video-card-container {
+  height: 100%;
+  justify-content: center;
   text-align: center;
   display: flex;
+  flex-direction: row;
+  padding: 1rem;
 }
