Add comment, reply, like, and dislike functionality and API calls.

--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -1,3 +1,12 @@
 .top-level {
     border: 2px solid;
 }
+
+.reply-box {
+    border: 2px solid;
+    
+}
+
+.reply-spacer {
+    padding-bottom: 0.5em;
+}
