--- a/src/components/Test/Test.css
+++ b/src/components/Test/Test.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   display: flex;
   width: 50%;
   padding: 0%;
@@ -10,4 +10,4 @@
 
 .top-level {
   border: 2px solid;
-}
+} */
